--- a/frontend/idiomaster/package.json
+++ b/frontend/idiomaster/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "json-schema": "^0.4.0",
     "lucide-react": "^0.483.0",
     "next": "15.1.0",
     "react": "^19.0.0",
@@ -29,7 +30,10 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
+    "@types/estree": "^1.0.7",
+    "@types/json-schema": "^7.0.15",
+    "@types/json5": "^0.0.30",
+    "@types/node": "^20.17.30",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
